# trustchain

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod
.devcontainer/: Dockerfile  devcontainer.json
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: go.yml
cmd/trustchain/: main.go
docs/: STRATEGY.md
internal/crypto/: crypto.go
internal/network/: network.go
internal/policy/: policy.go
python/trustchain/: setup.py
rust/crypto_core/: Cargo.toml
rust/crypto_core/src/: hash.rs  key.rs  signature.rs  utils.rs  verify.rs
