[package]
name = "trustchain-crypto"
version = "0.1.0"
edition = "2021"
authors = ["TrustChain Team"]
description = "Cryptographic core for TrustChain secure supply chain verification"
repository = "https://github.com/A5873/trustchain"
license = "Apache-2.0"
readme = "README.md"

# Optimize for both speed and binary size
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "trustchain_crypto"
# Create both a Rust library and a C-compatible library
crate-type = ["rlib", "cdylib"]

# Core dependencies
[dependencies]
# Cryptographic operations
ed25519-dalek = "2.1.0"
x25519-dalek = "2.0.0"
blake3 = "1.5.0"
sha2 = "0.10.7"
hmac = "0.12.1"
argon2 = "0.5.2"

# Data handling
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3.3"
hex = "0.4.3"

# Error handling
thiserror = "1.0.49"
anyhow = "1.0.75"

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# Utilities
rand = "0.8.5"
log = "0.4.20"
lazy_static = "1.4.0"

# FFI utilities for Go bindings
libc = "0.2.149"

# Python bindings (optional)
pyo3 = { version = "0.19.2", optional = true }

# Feature definitions
[features]
default = ["std"]
std = []
python = ["pyo3", "pyo3/extension-module"]
fips = ["sha2/fips"]

[build-dependencies]
cbindgen = "0.26.0"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8.0"
rstest = "0.18.2"

# Benchmark setup
[[bench]]
name = "crypto_benchmarks"
harness = false

[package]
name = "trustchain-crypto-core"
version = "0.1.0"
edition = "2021"
authors = ["TrustChain Team"]
description = "High-performance cryptographic verification engine for TrustChain"
repository = "https://github.com/A5873/trustchain"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "trustchain_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Cryptography
ring = "0.17.0"
ed25519-dalek = "2.0.0"
x25519-dalek = "2.0.0"
merkle_light = "0.4.0"
blake3 = "1.4.0"
sha2 = "0.10.6"

# Foreign Function Interface
pyo3 = { version = "0.18.3", features = ["extension-module"], optional = true }
ffi-support = "0.4.0"

# Serialization
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.70"

# Logging
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
criterion = "0.4.0"
tempfile = "3.5.0"
proptest = "1.2.0"

[features]
default = []
python = ["pyo3"]
wasm = ["getrandom/js"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

